<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Diary</string>
    <string name="tagline">My Journal, My Ideas &amp; My Mysteries.</string>
    <string name="privacy_policy_text">By checking the box you agree to our privacy policy.</string>
    <string name="welcome_title">Welcome To My Diary</string>
    <string name="welcome_subtitle">Your personal space to record your life\'s events. Let\'s personalize your experience.</string>
    <string name="continue_btn">Continue</string>
    <string name="privacy_security_title">Keep Privacy &amp; security</string>
    <string name="privacy_security_subtitle">Set lock and keep your secrets to yourself</string>
    <string name="storage_title">Storage Permission</string>
    <string name="storage_subtitle">You can view and recover your hidden photos from this location as you wish.</string>
    <string name="allow_btn">Allow</string>
    <string name="reasons_title">Why do you want to keep diaries?</string>
    <string name="reasons_subtitle">You can select more than one option.</string>
    <string name="reason_stress">Deal With Stress, anxiety</string>
    <string name="reason_self">Self-improvement</string>
    <string name="reason_memories">Capture Good Memories</string>
    <string name="reason_creativity">Inspire Creativity</string>
    <string name="reason_other">Other</string>
    <string name="frequency_title">How Often do you write diaries?</string>
    <string name="frequency_subtitle">Please Select at least one option.</string>
    <string name="freq_new">I\'m new to it.</string>
    <string name="freq_long">Haven\'t written for a long time.</string>
    <string name="freq_occasional">Occasionally</string>
    <string name="freq_frequent">Frequently</string>
    <string name="freq_depends">It depends</string>
    <string name="gender_title">How do you identify your gender?</string>
    <string name="gender_subtitle">Please Select at least one option.</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_other">Other</string>
    <string name="empty_diary_title">Every Second of our life is valuable..</string>
    <string name="empty_diary_subtitle">Write your first note and feel free..</string>
    <string name="notes_label">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="how_are_you">How are you?</string>
    <string name="background_label">Background</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="security_question">Security Question</string>
    <string name="security_question_hint">If you forgot your password, you can recover it with a security question..</string>
    <string name="choose_question">Choose Question</string>
    <string name="vault_title">Vault</string>
    <string name="private_title">Private</string>
    <string name="calendar_title">Calendar</string>
    <string name="images_title">Images</string>
    <string name="settings_title">Settings</string>
    <string name="personal_label">Personal</string>
    <string name="themes_label">Themes</string>
    <string name="password_label">Password</string>
    <string name="about_label">About</string>
    <string name="share_friends">Share with friends</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="password_settings">Password Settings</string>
    <string name="enable_disable">Enable/Disable</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
